# rav3n-n3t

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: daily-intelligence.yml
scripts/: generate-mermaid.mjs
src/ravennet/: __init__.py  cli.py  config.py  orchestrator.py
src/ravennet/pipelines/: __init__.py  huginn.py  muninn.py
tests/: test_orchestrator.py
